--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.3",
+    "framer-motion": "^11.5.4",
     "lucide-react": "^0.437.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "react": "^18",
