--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.437.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
